--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -7,24 +7,26 @@
              android:layout_marginBottom="2dp"
              android:orientation="vertical">
 
-    <RelativeLayout
-        android:id="@+id/view_background"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorDarkRed">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="right"
-            android:padding="16dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp"
-            android:layout_centerVertical="true"
-            android:text="DELETE"
-            android:textColor="@color/colorWhite"
-            android:textSize="19sp"/>
-    </RelativeLayout>
+    <!--<RelativeLayout-->
+        <!--android:id="@+id/view_background"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content">-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/tv_delete"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:background="@color/colorDarkRed"-->
+            <!--android:gravity="right"-->
+            <!--android:padding="16dp"-->
+            <!--android:text="DELETE"-->
+            <!--android:textColor="@color/colorWhite"-->
+            <!--android:textSize="19sp"/>-->
+
+    <!--</RelativeLayout>-->
 
     <RelativeLayout
         android:id="@+id/view_foreground"
@@ -40,15 +42,5 @@
             android:text="User 1"
             android:textColor="@color/colorBlack"
             android:textSize="19sp"/>
-        <TextView
-            android:id="@+id/tv_delete"
-            android:visibility="gone"
-            android:textColor="@color/colorWhite"
-            android:textSize="19sp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:text="DELETE"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
     </RelativeLayout>
 </FrameLayout>
