--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,4 +26,13 @@
         <item name="android:windowAnimationStyle">@style/DialogAnimation</item>
     </style>
 
+
+    <style name="FacebookLoginButton">
+        <item name="android:text">some thing</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+    </style>
+
 </resources>
