--- a/app/src/main/res/layout/activity_social_network.xml
+++ b/app/src/main/res/layout/activity_social_network.xml
@@ -20,4 +20,11 @@
         android:text="share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
+    <TextView
+        android:textColor="@color/colorBlack"
+        android:textSize="19sp"
+        android:id="@+id/tv_user_info"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
